# music-ai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.xpu  README.md  compose.cpu.yml  compose.xpu.yml  compose.yml  config.example.yml  genre_map.yaml  path-title-genre.csv  pyproject.toml
.github/workflows/: docker-publish.yml
app/: compare_genre.py  db.py  ensemble_tagger.py  ingest.py  learn_stats.py  mix.py  mix_schedule.py  muq_embed.py  navidrome_subsonic.py  prefetch_mulan.py  tag_bank.py  train_genre_clf.py
models/: genre_clf.joblib
